# SnakeGame

./: .gitmodules  CMakeLists.txt  LICENSE  todo.txt
src/: 2d_camera_teransform.hpp  2d_camera_transform.hpp  color.hpp  display_shader.hpp  food.hpp  gladimpl.cpp  id.hpp  image.hpp  impl.cpp  main.cpp  process_gl_errors.hpp  shader.hpp  shaders_src.hpp  shapes.hpp  snake.hpp  texture.hpp  vector.hpp  vertex.hpp  world.hpp
